--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: minimal-mistakes-jekyll
 title: lavishfitlegwear.com
 description: lavishfitlegwear.com
+remote_theme: pages-themes/leap-day@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
